<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>teraranger_array</name>
  <version>2.0.0</version>
  <description>This package provides ros nodes for multi-sensor arrays from Terabee</description>

  <maintainer email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</maintainer>
  <maintainer email="krzysztof.zurad@terabee.com">Krzysztof Zurad</maintainer>
  <maintainer email="baptiste.potier@terabee.com">Baptiste Potier</maintainer>

  <author email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</author>
  <author email="krzysztof.zurad@terabee.com">Krzysztof Zurad</author>
  <author email="mateusz.sadowski@terabee.com">Mateusz Sadowski</author>
  <author email="baptiste.potier@terabee.com">Baptiste Potier</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/teraranger_array</url>
  <url type="website">https://github.com/Terabee/teraranger_array</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>serial</build_depend>

  <test_depend>rosunit</test_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>serial</exec_depend>
</package>
